2013-01-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix surviver reuse bug introduced yesterday

2013-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve positioning: make parents and new siblings visible

2013-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix assertion when undo states are incorrect because of
	  insertions

2012-09-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* die with a sensible message in case Proof is missing
	* polish man page and add limitations section

2012-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix clone deletes primary window problem

2012-07-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix an embarrassing control flow bug in input.ml

2012-05-14  Hendrik Tews <prooftree@askra.de>

	* release version 0.10 on 2012-05-14 21:11:13 UTC

2012-05-14  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2012-05-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* more debian packaging fixes

2012-05-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* prepare release
	* adjust debian stuff

2012-05-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* use odoc_xref tags for doc links into other libraries

2012-03-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix assertion in callback

2012-03-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* internal documentation complete

2012-03-07  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* lots of internal documentation

2012-03-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* ignore overridden methods warning as long as we support 3.11
	* check-doc makefile goal
	* add minimal support for HOL Light
	* add and fix some doc comments

2012-01-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* unescaped string end-of-line warning

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* structured copyright
	* doc-base entry

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try watch again
