@@ -35,6 +35,17 @@ a img {
  ! - <P></P></LI>
  ! - </UL>
   -->
+<DT>XXXX-XX-XX
+<DD>
+<UL>
+<LI>support for bullets and braces of Coq 8.4
+</LI>
+<LI>incompatible protocol change: requires Proof General &GT; 4.3pre121019
+</LI>
+<LI>several bug fixes and small improvements
+<P></P></LI>
+</UL>
+
 <DT>2012-05-14: Prooftree 0.10 released
 <DD>
 <UL>
@@ -164,7 +175,7 @@ far as possible)
 <HR noshade size=2>
 <FONT SIZE="-2">
 last changed on 
-<!-- hhmts start -->14 May 2012
+<!-- hhmts start -->14 Jan 2013
 <!-- hhmts end -->
 by <A HREF="/index.html.en">Hendrik</A>
 </FONT></BODY> </HTML>
