@@ -260,7 +260,9 @@ followed by the name of the customization group inside
 .\" ==========================================================================
 .\"
 .SH LIMITATIONS
-For Coq proofs must be started with command 
+For
+.B Coq\fR,
+proofs must be started with command 
 .I Proof\fR,
 which is the recommended practice anyway (see Coq problem report
 2776).
