@@ -1,3 +1,12 @@
+2013-01-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* support for bullets and braces
+	* protocol change to version 3
+	  - change proof-finished into branch-finished and adapt
+	    its meaning
+	* introduce proof-tree states without current sequent and
+	  permit navigation commands without current sequent
+
 2013-01-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* fix surviver reuse bug introduced yesterday
